[package]
name = "glaive"
version = "0.1.0"
authors = ["Kevin Caccamo"]
license = "Apache-2.0"
repository = "https://github.com/Talon1024/glaive"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"

[dependencies]
cfg-if = "1.0.0"
glow = "0.12.0"
winit = "0.27.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
glutin = "0.30.3"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
console_log = "0.2.0"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }
