[package]
name = "glaive"
version = "0.2.0"
authors = ["Kevin Caccamo"]
description = "A template project for developing desktop or otherwise graphical apps that run natively and in web browsers with WASM"
license = "Apache-2.0"
repository = "https://github.com/Talon1024/glaive"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "glaive"

[dependencies]
cfg-if = "1.0.0"
glow = "0.12.0"
winit = "0.28.1"
rfd = "0.11.1"
lazy_static = "1.4.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
glutin = "0.30.6"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
futures = {version = "0.3.26", features = ["executor", "thread-pool"]}

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.84"
base64 = "0.21.0"
percent-encoding = "2.2.0"
web-sys = "0.3.61"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.34"
